# cargo-skyline

./: Cargo.toml  Dockerfile  README.md
new-project-template/: Cargo.toml  Cargo.toml.template
new-project-template/src/: lib.rs
src/: build.rs  cargo_info.rs  error.rs  ftp.rs  game_paths.rs  git_clone_wrappers.rs  installer.rs  ip_addr.rs  main.rs  new_plugin.rs  package.rs  tcp_listen.rs  update_std.rs
src/installer/: temp_git.rs
