[package]
name = "cargo-skyline"
version = "1.5.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
description = "A cargo subcommand for working with Skyline plugins written in Rust"
license = "MIT"
repository = "https://github.com/jam1garner/cargo-skyline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
dirs = "2.0.2"
colored = "1.9.3"
serde = { version = "1", features = ["derive"] }
cargo_metadata = "0.9.1"
serde_json = "1.0.51"
linkle = "0.2.10" 
glob = "0.3"
