[package]
name = "cargo-skyline"
version = "2.0.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"
description = "A cargo subcommand for working with Skyline plugins written in Rust"
license = "MIT"
repository = "https://github.com/jam1garner/cargo-skyline"

[dependencies]
structopt = "0.3.13"
dirs = "2.0.2"
serde = { version = "1", features = ["derive"] }
cargo_metadata = "0.9.1"
serde_json = "1.0.51"
linkle = "0.2.10" 
glob = "0.3"
attohttpc = "0.13"
zip = "0.5.5"
owo-colors = "1"

[features]
debug = []
