[package]
name = "cargo-skyline"
version = "3.1.0"
authors = ["jam1garner <jam@jam1.re>"]
edition = "2021"
description = "A cargo subcommand for working with Skyline plugins written in Rust"
license = "MIT"
repository = "https://github.com/jam1garner/cargo-skyline"

[dependencies]
structopt = "0.3.13"
dirs = "2.0.2"
serde = { version = "1", features = ["derive"] }
cargo_metadata = "0.10"
serde_json = "1.0.51"
linkle = "0.2.10" 
glob = "0.3"
zip = "0.5.5"
owo-colors = "3"
#octocrab = { git = "https://github.com/jam1garner/octocrab", branch = "feat-list-commits", features = ["rustls"], default-features = false }
cargo-skyline-octocrab = { version = "0.16", features = ["rustls"], default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
url = "2.2.2"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
indicatif = "0.16.0"
dialoguer = "0.8.0"
walkdir = "2.3.2"

[features]
debug = []
